# window-clock

./: CMakeCache.txt  CMakeLists.txt  Makefile  WindowClock  clock.cpp  clock.h  clock_app.cpp  clock_app.h  cmake_install.cmake  main.cpp
